--- a/nightowl/src/main/resources/templates/index.html
+++ b/nightowl/src/main/resources/templates/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 		<title>Night Owl</title>
 	</head>
 	<body>
-		<h1>Night Owl</h1>
-		<h2>Free to use, user-contributed nightlife venue database</h2>
-		<a th:href="@{/login}">Login</a>
-		<a th:href="@{/register}">Register</a>
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #00152a;">
+            <a class="navbar-brand" th:href="@{/}">
+                <img th:src="@{/images/owl-sm.png}" width="30" height="30" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/console}">Add new venues</a>
+                    </li>
+                </ul>
+                <div sec:authorize="isAnonymous()">
+                    <a class="btn btn-outline-light my-2 my-sm-0" th:href="@{/login}">Login</a>
+                </div>
+                <div sec:authorize="isAuthenticated()">
+                    <form method="post" th:action="@{/logout}">
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col text-center">
+                    <img class="my-5" th:src="@{/images/owl-lg.png}">
+                    <h1 class="display-4">Night Owl</h1>
+                    <p class="lead">Free to use, user-contributed nightlife venue database</p>
+                    <a class="btn btn-outline-primary" th:href="@{/console}">Add new venues</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
 </html>
